--- a/src/main/resources/templates/events/create.html
+++ b/src/main/resources/templates/events/create.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org/">
-<head>
-    <meta charset="UTF-8"/>
-    <title>Coding Events</title>
-</head>
-<body>
+<html lang="en" xmlns:th="http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-4.dtd">
+<head th:replace="fragments :: head"></head>
+<body class="container">
 
 <h1>Create Event</h1>
 
-<form method="post">
-    <input type="text" name="eventName">
-    <input type="submit" value="Create Event">
+<nav th:replace="fragments :: navigation"></nav>
+
+<form method="post" action="/events/create">
+    <div class="form-group">
+        <label>Name
+            <input type="text" name="eventName" class="form-control">
+        </label>
+    </div>
+    <div class="form-group">
+        <input type="submit" value="Create Event" class="btn btn-success">
+    </div>
 </form>
 
 </body>
