Thymeleaf practice Models/Binding complete

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="https://www.thymeleaf.org/">
+<html lang="en" xmlns:th="https://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-4.dtd">
 <head th:fragment="head">
    <meta charset="UTF-8">
    <title>Coding Events</title>
@@ -11,21 +11,14 @@
 </head>
 <body>
 
-<nav th:fragment="navigation">
+<nav th:fragment="header">
    <h1 th:text="${title}">Coding Events</h1>
    <ul class="nav">
       <li class="nav-item"><a class="nav-link" href="/events">All Events</a></li>
       <li class="nav-item"><a class="nav-link" href="/events/create">Create Event</a></li>
+      <li class="nav-item"><a class="nav-link" href="/events/delete">Delete Event</a></li>
    </ul>
 </nav>
 
-<!--<h1 th:fragment="styledHeader" class="fancyTitle" th:text="${title}"></h1>-->
-
-<!--<div th:fragment="linkList">-->
-<!--   <hr>-->
-<!--   <a href="https://www.launchcode.org">LaunchCode</a> <br/>-->
-<!--   <a href="https://www.lego.com">Play Well</a> <br/>-->
-<!--   <a href="https://www.webelements.com">Other Building Blocks</a>-->
-<!--</div>-->
 </body>
 </html>
