--- a/src/main/resources/templates/events/edit.html
+++ b/src/main/resources/templates/events/edit.html
@@ -9,12 +9,12 @@
     <div class="form-group">
         <input type="hidden" th:value="${event.id}" name="eventId" />
         <label>Name
-            <input type="text" th:value="${event.name}" class="form-control"/>
+            <input type="text" th:value="${event.name}" name="name" class="form-control"/>
         </label>
     </div>
     <div class="form-group">
         <label>Description
-            <input type="text" th:value="${event.description}" class="form-control"/>
+            <input type="text" th:value="${event.description}" name="description" class="form-control"/>
         </label>
     </div>
     <div class="form-group">
