--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -5,8 +5,7 @@
    <title>Coding Events</title>
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
-<!--   <script th:src="@{/script.js}"></script>-->
-<!--   <link th:href="@{/styles.css}" rel="stylesheet">-->
+   <link th:href="@{/styles.css}" rel="stylesheet">
 
 </head>
 <body>
